the two button is ok!

--- a/sourceCodeFinal/gui/BankGui/guibank.ui
+++ b/sourceCodeFinal/gui/BankGui/guibank.ui
@@ -85,7 +85,7 @@
      <string>忙碌</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="createPersonButton">
+   <widget class="QPushButton" name="randCreatePersonButton">
     <property name="geometry">
      <rect>
       <x>605</x>
